--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test-task-devit-frontend",
   "version": "0.1.0",
   "private": true,
+  "author": "Jane Doe",
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
